# Text-Region-Identification

./: CMakeLists.txt  GSDocumentConversion.cpp  ImageProcessing.cpp  ImageProcessing.h  ProcessingRunnable.cpp  ProcessingRunnable.h  README.md
